[gd_scene load_steps=10 format=3 uid="uid://5qyrbvi1und7"]

[ext_resource type="Script" path="res://WalkerEnemy.gd" id="1_optno"]
[ext_resource type="Texture2D" uid="uid://4gk6k043ics4" path="res://sprites/ghoul_spritesheet.png" id="2_gv0os"]

[sub_resource type="Animation" id="Animation_ugtmm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mlyp6"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_nvxkj"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yhpom"]
_data = {
"RESET": SubResource("Animation_ugtmm"),
"die": SubResource("Animation_mlyp6"),
"walk": SubResource("Animation_nvxkj")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eao5y"]
size = Vector2(13, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8x5ql"]
size = Vector2(11, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c2jvo"]
size = Vector2(19, 7.5)

[node name="WalkingGhoul" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_optno")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-0.5, 0)
scale = Vector2(1.0625, 1)
texture = ExtResource("2_gv0os")
hframes = 4
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yhpom")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 3.5)
shape = SubResource("RectangleShape2D_eao5y")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-1, -5)
shape = SubResource("RectangleShape2D_8x5ql")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-0.5, 4)
shape = SubResource("RectangleShape2D_c2jvo")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
